# rust-sel4

./: .gitignore  README.md
apps/: .gitignore  Cargo.toml  Makefile
apps/.cargo/: config
apps/src/: common.rs  lang_items.rs  lib.rs  linker.lds  sel4_crt0.S
apps/src/runtime/: bootinfo.rs  constants.rs  env.rs  functions.rs  mod.rs  stdio.rs  structures.rs
apps/src/syscall/: mod.rs
apps/src/syscalls/: cap_ops.rs  mod.rs  syscall_ids.rs
doc/: riscv64为什么会有16位指令.md  todos.md
kernel/: .gitignore  Cargo.toml  Makefile
kernel/src/: common.rs  entry.asm  head.S  linker.ld  linker.lds  main.rs  panic_handler.rs
kernel/src/drivers/: irq.rs  mod.rs
kernel/src/kernel/: boot.rs  bootinfo.rs  cspace.rs  heap.rs  mod.rs  statedata.rs  structures.rs  syscall.rs  thread.rs  trap.S  traps.rs  vspace.rs
kernel/src/machine/: io.rs  mod.rs  registerset.rs
kernel/src/object/: cnode.rs  endpoint.rs  mod.rs  tcb.rs  untyped.rs
kernel/src/traps/: basic_syscalls.rs  exceptions.rs  interrupts.rs  mod.rs  syscalls.rs  unknown_syscalls.rs
sel4-common/: Cargo.toml
sel4-common/src/: bootinfo_common.rs  constants.rs  invocation.rs  lib.rs  macros.rs  shared_types.rs  structures_common.rs  syscall_ids.rs
tools/elfloader/: Cargo.toml  Makefile  linker.lds
tools/elfloader/src/: archive.S  common.rs  config.rs  crt0.S  lang_items.rs  main.rs
tools/elfloader/src/machine/: io.rs  mod.rs
