[package]
name = "apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8"
bitflags = "1.3.2"
spin = "0.9.2"
sel4-common = { path = "../sel4-common" }

[profile.release]
opt-level = 1
debug = 2
lto = "off"